# N7

./: .gitignore  README.md
1A/Langage C/RenduC1/: Ex1.txt  monnaie.c
1A/Langage C/RenduC2/: 1SN_LangageC_C2_Bilan.c
1A/Langage C/RenduC3/: Makefile  file.c  file.h  reponses1.txt
1A/Programmation impérative/pim-s1-pr2/: b__evaluer_alea_lca.adb  evaluer_alea_lca.adb  lca.adb  th.adb
1A/Programmation impérative/pim-s2-pr2/: LISEZ-MOI.md  LISEZ-MOI.txt  files-v2.ads  simulation_cpam.adb  test_files.adb  version.sh
1A/Programmation impérative/pr2-s2/: LISEZ-MOI.md  LISEZ-MOI.txt  assures.adb  assures.ads  cpam.adb  cpam.ads  exceptions.ads  files-v1.adb  (+2 more)
1A/Statistique/: TP2.m
2A/Deep Learning/: TP1_2_Réseaux_de_Neurones_avec_Numpy_Sujet.ipynb
2A/Deep Learning Project/: load_data.ipynb
2A/Optimisation/: bouchama_ayoub_l2.tgz
2A/Programmation Fonctionnelle/BE/19-20/sourcesEtu/sourcesEtu/src/: bfs.ml  bfs.mli  dune  lexer.mll  location.ml  location.mli  main.ml  parse.ml  parse.mli  parser.mly  plateau.ml  plateau.mli  pos.ml  report.ml  report.mli  utils.ml  utils.mli  wall.ml  wall.mli
2A/Semantique et traduction des langages/TP2/: Main.ml  Semantics.ml  Test.ml  Types.ml  dune
2A/Système concurrent/: CorrecTD.txt
3A/Web Sémantique/: Web Sémantique (TP1).txt
PIM/: b__evaluer_alea_lca.adb  b__evaluer_alea_lca.ads  lca_sujet.adb  test_th.adb
STAT/: TP1.m  TP2.m  TP3.m  fonctions_TP2_stat.m.txt
TOB/Mini Projet 1/: Cercle.java  CercleTest.java  ComplementsCercleTest.java  FormeCercleTest.java  LISEZ-MOI.txt
Telecommunication/: bandebase.m
(+1138 files in other folders)
